--- a/css/tw/out.css
+++ b/css/tw/out.css
@@ -3883,6 +3883,10 @@ textarea.form-control.is-invalid {
   max-width: 32rem;
 }
 
+.max-w-xs {
+  max-width: 20rem;
+}
+
 .flex-auto {
   flex: 1 1 auto;
 }
@@ -5229,6 +5233,10 @@ textarea.form-control.is-invalid {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-\[0\.33rem\] {
+  padding-top: 0.33rem;
 }
 
 .pt-\[0\.37rem\] {
@@ -8293,9 +8301,9 @@ form .medium-editor-element[data-medium-focused] {
   background-color: rgb(255 255 255 / 0.3);
 }
 
-.\[\&\:not\(\[data-te-collapse-collapsed\]\)\]\:bg-white:not([data-te-collapse-collapsed]) {
+.\[\&\:not\(\[data-te-collapse-collapsed\]\)\]\:bg-neutral-50:not([data-te-collapse-collapsed]) {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
 }
 
 .\[\&\:not\(\[data-te-collapse-collapsed\]\)\]\:text-primary:not([data-te-collapse-collapsed]) {
@@ -8391,15 +8399,6 @@ form .medium-editor-element[data-medium-focused] {
 
 :is(.dark .dark\:\[\&\>svg\]\:fill-white>svg) {
   fill: #fff;
-}
-
-.\[\&\[data-te-collapse-collapsed\]\]\:rounded-b-\[15px\][data-te-collapse-collapsed] {
-  border-bottom-right-radius: 15px;
-  border-bottom-left-radius: 15px;
-}
-
-.\[\&\[data-te-collapse-collapsed\]\]\:transition-none[data-te-collapse-collapsed] {
-  transition-property: none;
 }
 
 .\[\&\[data-te-dropdown-show\]\]\:block[data-te-dropdown-show] {
