--- a/css/tw/out.css
+++ b/css/tw/out.css
@@ -2983,6 +2983,10 @@ textarea.form-control.is-invalid {
   top: 11px;
 }
 
+.top-\[12px\] {
+  top: 12px;
+}
+
 .top-\[13px\] {
   top: 13px;
 }
@@ -3033,6 +3037,10 @@ textarea.form-control.is-invalid {
 
 .z-\[1000\] {
   z-index: 1000;
+}
+
+.z-\[1034\] {
+  z-index: 1034;
 }
 
 .z-\[1035\] {
@@ -4453,6 +4461,11 @@ textarea.form-control.is-invalid {
 .rounded-b-md {
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
+}
+
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
 }
 
 .rounded-l-\[0\.25rem\] {
