Add dark prose link option

--- a/css/tw/in.css
+++ b/css/tw/in.css
@@ -11,6 +11,11 @@
     @apply text-clink no-underline;
   }
 
+  .prose.prose-dark a {
+    @apply text-neutral-50 no-underline;
+  }
+  
+
   .prose a:hover {
     @apply underline;
   }
